entity_macros/tests/ui/derive/value/unsupported-enum.stderr
error: Enums are unsupported
 --> $DIR/unsupported-enum.rs:4:1
  |
4 | enum TestValue {
  | ^^^^
