entity_macros/tests/ui/derive/value/unsupported-enum.rs
use entity::Value;

#[derive(Value)]
enum TestValue {
    A(u32),
    B(String),
}

fn main() {}
